# some_monorepo

./: create_packages.py  create_random_file.py
pkg_1/: pyproject.toml
pkg_10/: pyproject.toml
pkg_100/: pyproject.toml
pkg_11/: pyproject.toml
pkg_12/: pyproject.toml
pkg_13/: pyproject.toml
pkg_14/: pyproject.toml
pkg_15/: pyproject.toml
pkg_16/: pyproject.toml
pkg_17/: pyproject.toml
pkg_18/: pyproject.toml
pkg_19/: pyproject.toml
pkg_2/: pyproject.toml
pkg_20/: pyproject.toml
pkg_21/: pyproject.toml
pkg_22/: pyproject.toml
pkg_23/: pyproject.toml
pkg_24/: pyproject.toml
pkg_25/: pyproject.toml
pkg_26/: pyproject.toml
pkg_27/: pyproject.toml
pkg_28/: pyproject.toml
pkg_29/: pyproject.toml
pkg_3/: pyproject.toml
pkg_30/: pyproject.toml
pkg_31/: pyproject.toml
pkg_32/: pyproject.toml
pkg_33/: pyproject.toml
pkg_34/: pyproject.toml
pkg_35/: pyproject.toml
pkg_36/: pyproject.toml
pkg_37/: pyproject.toml
pkg_38/: pyproject.toml
pkg_39/: pyproject.toml
pkg_4/: pyproject.toml
pkg_40/: pyproject.toml
pkg_41/: pyproject.toml
pkg_42/: pyproject.toml
pkg_43/: pyproject.toml
pkg_44/: pyproject.toml
pkg_45/: pyproject.toml
pkg_46/: pyproject.toml
pkg_47/: pyproject.toml
pkg_48/: pyproject.toml
pkg_49/: pyproject.toml
pkg_5/: pyproject.toml
pkg_50/: pyproject.toml
pkg_51/: pyproject.toml
pkg_52/: pyproject.toml
pkg_53/: pyproject.toml
pkg_54/: pyproject.toml
pkg_55/: pyproject.toml
pkg_56/: pyproject.toml
pkg_57/: pyproject.toml
pkg_58/: pyproject.toml
pkg_59/: pyproject.toml
pkg_6/: pyproject.toml
pkg_60/: pyproject.toml
pkg_61/: pyproject.toml
pkg_62/: pyproject.toml
pkg_63/: pyproject.toml
pkg_64/: pyproject.toml
pkg_65/: pyproject.toml
pkg_66/: pyproject.toml
pkg_67/: pyproject.toml
pkg_68/: pyproject.toml
pkg_69/: pyproject.toml
pkg_7/: pyproject.toml
pkg_70/: pyproject.toml
pkg_71/: pyproject.toml
pkg_72/: pyproject.toml
pkg_73/: pyproject.toml
pkg_74/: pyproject.toml
pkg_75/: pyproject.toml
pkg_76/: pyproject.toml
pkg_77/: pyproject.toml
pkg_78/: pyproject.toml
pkg_79/: pyproject.toml
pkg_9/: pyproject.toml
pkg_a/: pyproject.toml
pkg_fast/: pyproject.toml
pkg_slow/: pyproject.toml
(+23 files in other folders)
