[tool.poetry]
name = "pkg_14"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
packages = [{ include = "pkg_14"}]

[tool.poetry.dependencies]
python = "^3.10 <3.13"
numpy = "^1.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
