[tool.poetry]
name = "pkg-a"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
packages = [{ include = "pkg_a"}]

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
