[tool.poetry]
name = "pkg-fast"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
packages = [{ include = "pkg_fast"}]

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
