[tool.poetry]
name = "pkg-slow"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
packages = [{ include = "pkg_slow"}]

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
